# Infosys_SpringBoard_-AI-Powered_Identity_Verification_and_Fraud_Detection_for_KYC_Compliance

./: .gitignore  Agile_Document.xlsm  Dataset Information  LICENSE  README.md
backend/: .gitignore  server.js
backend/controllers/: auth.js  kyc.js
backend/models/: Verification.js
backend/routes/: kyc.js
frontend/: package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: Account.jsx  ChatHistory.jsx  DashboardLayout.jsx  Landingpage.css  Landingpage.jsx  Learnmore.css  Learnmore.jsx  Login.jsx  Register.jsx  Upload.jsx
kyc_flask/: Dockerfile  README.md  app.py  create_master_templates.py  docker-compose.yml  export_models.py  imghdr.py  main.py  pyproject.toml  requirements.txt  run_it_tmp.py  test_api.py  wsgi.py
kyc_flask/models/: README.md  aadhaar_forgery_threshold.json  aadhaar_gnn_model.pth  aadhaar_master_hog.npy  kyc_classifier.tflite  pan_master_hog.npy  passport_master_hog.npy
kyc_flask/templates/: index.html
kyc_flask/utils/: aadhaar_model.py  base_gnn.py  classifier.py  feature_worker.py  forgery_detector.py  ocr_runner.py  ocr_worker.py  pan_model.py  passport_model.py  tflite_worker.py
notebooks/: Extracting datasets from Roboflow.ipynb
notebooks/Doc detection Notebooks/: KYC Identification for Aadhar, Pan and Passport.ipynb  Pan_card_Detection.ipynb
notebooks/GNN Notebooks/: Aadhaar_GNN_model.ipynb  Pan_Card_GNN_model.ipynb  passport_GNN_model.ipynb
notebooks/OCR Notebooks/: Aadhaar_OCR.ipynb  Pan_Card_OCR.ipynb  Passport_OCR.ipynb
trained models/: pan_gnn_model.pth  passport_gnn_model.pth
(+4 files in other folders)
